package.json 수정

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://akwls.github.io/ReactJS_Example/movie-app"
+  "homepage": "https://akwls.github.io/ReactMovieApp"
 }
